--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "",
   "dependencies": {
     "bl": "^4.0.2",
-    "learnyounode": "^4.2.1"
+    "learnyounode": "^4.2.1",
+    "strftime": "^0.10.0"
   },
   "author": "RonPlusSign",
   "license": "ISC"
